2002-03-29  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* src/sheet.c (sheet_delete_rows, sheet_delete_cols) : Fixed the
	adjustments for Solver's parameters.

	* src/sheet.c (sheet_insert_rows, sheet_insert_cols) : Fixed the
	adjustments for Solver's parameters.

2002-03-29  Morten Welinder  <terra@diku.dk>

	* src/value.c (value_new_cellrange_unsafe, value_new_cellrange,
	value_new_cellrange_r, value_new_array_non_init, value_release):
	Use chunk allocator for ranges and arrays.
	(value_init): Initialise range and array pools.
	(value_shutdown): Free range and array pools.

2002-03-29  Morten Welinder  <terra@diku.dk>

	* src/gutils.c (gnm_mem_chunk_new, gnm_mem_chunk_destroy,
	gnm_mem_chunk_alloc, gnm_mem_chunk_free): Keep per-block
	freelists.
	(gnm_mem_chunk_free): g_free chunks that are completely empty.

	* src/value.c (value_get_as_float): Improve precision.
	(value_get_as_int): Take sign into account when (fake-)truncating
	floating point numbers.
	(value_new_error, value_new_error_str, value_new_string,
	value_new_string_str, value_release): Use chunk allocator for
	strings and errors.
	(value_init): Initialise error and string pools.
	(value_shutdown): Free error and string pools.

2002-03-29  Jukka-Pekka Iivonen  <jiivonen@hutcs.cs.hut.fi>

	* samples/solver/regression-test-suite.gnumeric: Solver's
	regression test suite added.

2002-03-28  Jody Goldberg <jody@gnome.org>

	* src/sheet-object.c (sheet_object_set_sheet) : ref the object when we
	  add it to the sheet.
	(sheet_object_clear_sheet) : unref here.
	(sheet_object_set_sheet) : move the content of new_view here.

	* src/print-cell.c (print_cell) : seems like the sign of the descenty
	  is reversed.
	* src/print.c (print_footers) : ditto.

	* src/sheet.c (sheet_move_range) : long list onto short list not
	  vice versa.
	(sheet_delete_cols) : ditto.
	(sheet_delete_rows) : ditto.
	* src/dependent.c (micro_hash_resize) : ditto.

	* src/style.c (style_font_new_simple) : init the print_font.